--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://www.unpkg.com/odyc@0.0.102/dist/index.global.js"></script>
-    <script src="/main.js"></script>
+    <script src="/assets.js"></script>
     <script src="/map.js"></script>
     <title>Forest Hike | Memory minigame</title>
     <link rel="icon" type="image/png" href="/favicon.png" />
