Fix between-scenes flash

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="/scenes/stats.js"></script>
     <script src="/scenes/difficulty.js"></script>
     <script src="/scenes/game.js"></script>
+    <script src="/scenes/celebration.js"></script>
   </head>
   <body>
     <script>
